src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHARACTER
    POWER
    SUBROUTINE

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> programa lista_funcoes
Rule 2     lista_funcoes -> lista_funcoes funcao
Rule 3     lista_funcoes -> vazio
Rule 4     programa -> PROGRAM ID lista_instrucao END
Rule 5     funcao -> tipo FUNCTION ID LPAREN lista_parametros RPAREN lista_instrucao END
Rule 6     lista_parametros -> lista_parametros_ext
Rule 7     lista_parametros -> vazio
Rule 8     lista_parametros_ext -> lista_parametros_ext COMMA ID
Rule 9     lista_parametros_ext -> ID
Rule 10    lista_instrucao -> lista_instrucao instrucao
Rule 11    lista_instrucao -> instrucao
Rule 12    instrucao -> instrucao_sem_label
Rule 13    instrucao -> label instrucao_sem_label
Rule 14    instrucao_sem_label -> declaracao
Rule 15    instrucao_sem_label -> atribuicao
Rule 16    instrucao_sem_label -> comando_if
Rule 17    instrucao_sem_label -> comando_do
Rule 18    instrucao_sem_label -> comando_goto
Rule 19    instrucao_sem_label -> comando_print
Rule 20    instrucao_sem_label -> comando_read
Rule 21    instrucao_sem_label -> comando_continue
Rule 22    instrucao_sem_label -> comando_return
Rule 23    label -> INTEGER_LIT
Rule 24    declaracao -> tipo lista_variaveis
Rule 25    tipo -> INTEGER
Rule 26    tipo -> REAL
Rule 27    tipo -> LOGICAL
Rule 28    lista_variaveis -> lista_variaveis COMMA variavel_decl
Rule 29    lista_variaveis -> variavel_decl
Rule 30    variavel_decl -> ID LPAREN INTEGER_LIT RPAREN
Rule 31    variavel_decl -> ID
Rule 32    atribuicao -> referencia ASSIGN expressao
Rule 33    referencia -> ID LPAREN lista_argumentos RPAREN
Rule 34    referencia -> ID
Rule 35    comando_if -> IF expressao THEN lista_instrucao ELSE lista_instrucao ENDIF
Rule 36    comando_if -> IF expressao THEN lista_instrucao ENDIF
Rule 37    comando_do -> DO label ID ASSIGN expressao COMMA expressao opt_step lista_instrucao label CONTINUE
Rule 38    opt_step -> COMMA expressao
Rule 39    opt_step -> vazio
Rule 40    comando_goto -> GOTO label
Rule 41    comando_continue -> CONTINUE
Rule 42    comando_return -> RETURN
Rule 43    comando_print -> PRINT TIMES COMMA lista_prints
Rule 44    lista_prints -> lista_prints COMMA elemento_print
Rule 45    lista_prints -> elemento_print
Rule 46    elemento_print -> STRING
Rule 47    elemento_print -> expressao
Rule 48    comando_read -> READ TIMES COMMA lista_reads
Rule 49    lista_reads -> lista_reads COMMA referencia
Rule 50    lista_reads -> referencia
Rule 51    expressao -> expressao OR termo_logico
Rule 52    expressao -> termo_logico
Rule 53    termo_logico -> termo_logico AND fator_logico
Rule 54    termo_logico -> fator_logico
Rule 55    fator_logico -> NOT fator_logico
Rule 56    fator_logico -> comparacao
Rule 57    comparacao -> expressao_aritmetica EQ expressao_aritmetica
Rule 58    comparacao -> expressao_aritmetica NE expressao_aritmetica
Rule 59    comparacao -> expressao_aritmetica LT expressao_aritmetica
Rule 60    comparacao -> expressao_aritmetica LE expressao_aritmetica
Rule 61    comparacao -> expressao_aritmetica GT expressao_aritmetica
Rule 62    comparacao -> expressao_aritmetica GE expressao_aritmetica
Rule 63    comparacao -> expressao_aritmetica
Rule 64    expressao_aritmetica -> expressao_aritmetica PLUS termo
Rule 65    expressao_aritmetica -> expressao_aritmetica MINUS termo
Rule 66    expressao_aritmetica -> termo
Rule 67    termo -> termo TIMES fator
Rule 68    termo -> termo DIVIDE fator
Rule 69    termo -> fator
Rule 70    fator -> MINUS fator
Rule 71    fator -> primario
Rule 72    primario -> INTEGER_LIT
Rule 73    primario -> REAL_LIT
Rule 74    primario -> TRUE
Rule 75    primario -> FALSE
Rule 76    primario -> referencia
Rule 77    primario -> LPAREN expressao RPAREN
Rule 78    primario -> MOD LPAREN expressao COMMA expressao RPAREN
Rule 79    lista_argumentos -> lista_argumentos_ext
Rule 80    lista_argumentos -> vazio
Rule 81    lista_argumentos_ext -> lista_argumentos_ext COMMA expressao
Rule 82    lista_argumentos_ext -> expressao
Rule 83    vazio -> <empty>

Terminals, with rules where they appear

AND                  : 53
ASSIGN               : 32 37
CHARACTER            : 
COMMA                : 8 28 37 38 43 44 48 49 78 81
CONTINUE             : 37 41
DIVIDE               : 68
DO                   : 37
ELSE                 : 35
END                  : 4 5
ENDIF                : 35 36
EQ                   : 57
FALSE                : 75
FUNCTION             : 5
GE                   : 62
GOTO                 : 40
GT                   : 61
ID                   : 4 5 8 9 30 31 33 34 37
IF                   : 35 36
INTEGER              : 25
INTEGER_LIT          : 23 30 72
LE                   : 60
LOGICAL              : 27
LPAREN               : 5 30 33 77 78
LT                   : 59
MINUS                : 65 70
MOD                  : 78
NE                   : 58
NOT                  : 55
OR                   : 51
PLUS                 : 64
POWER                : 
PRINT                : 43
PROGRAM              : 4
READ                 : 48
REAL                 : 26
REAL_LIT             : 73
RETURN               : 42
RPAREN               : 5 30 33 77 78
STRING               : 46
SUBROUTINE           : 
THEN                 : 35 36
TIMES                : 43 48 67
TRUE                 : 74
error                : 

Nonterminals, with rules where they appear

atribuicao           : 15
comando_continue     : 21
comando_do           : 17
comando_goto         : 18
comando_if           : 16
comando_print        : 19
comando_read         : 20
comando_return       : 22
comparacao           : 56
declaracao           : 14
elemento_print       : 44 45
expressao            : 32 35 36 37 37 38 47 51 77 78 78 81 82
expressao_aritmetica : 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65
fator                : 67 68 69 70
fator_logico         : 53 54 55
funcao               : 2
inicio               : 0
instrucao            : 10 11
instrucao_sem_label  : 12 13
label                : 13 37 37 40
lista_argumentos     : 33
lista_argumentos_ext : 79 81
lista_funcoes        : 1 2
lista_instrucao      : 4 5 10 35 35 36 37
lista_parametros     : 5
lista_parametros_ext : 6 8
lista_prints         : 43 44
lista_reads          : 48 49
lista_variaveis      : 24 28
opt_step             : 37
primario             : 71
programa             : 1
referencia           : 32 49 50 76
termo                : 64 65 66 67 68
termo_logico         : 51 52 53
tipo                 : 5 24
variavel_decl        : 28 29
vazio                : 3 7 39 80

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . programa lista_funcoes
    (4) programa -> . PROGRAM ID lista_instrucao END

    PROGRAM         shift and go to state 3

    inicio                         shift and go to state 1
    programa                       shift and go to state 2

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> programa . lista_funcoes
    (2) lista_funcoes -> . lista_funcoes funcao
    (3) lista_funcoes -> . vazio
    (83) vazio -> .

    INTEGER         reduce using rule 83 (vazio -> .)
    REAL            reduce using rule 83 (vazio -> .)
    LOGICAL         reduce using rule 83 (vazio -> .)
    $end            reduce using rule 83 (vazio -> .)

    lista_funcoes                  shift and go to state 4
    vazio                          shift and go to state 5

state 3

    (4) programa -> PROGRAM . ID lista_instrucao END

    ID              shift and go to state 6


state 4

    (1) inicio -> programa lista_funcoes .
    (2) lista_funcoes -> lista_funcoes . funcao
    (5) funcao -> . tipo FUNCTION ID LPAREN lista_parametros RPAREN lista_instrucao END
    (25) tipo -> . INTEGER
    (26) tipo -> . REAL
    (27) tipo -> . LOGICAL

    $end            reduce using rule 1 (inicio -> programa lista_funcoes .)
    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    LOGICAL         shift and go to state 11

    funcao                         shift and go to state 7
    tipo                           shift and go to state 8

state 5

    (3) lista_funcoes -> vazio .

    INTEGER         reduce using rule 3 (lista_funcoes -> vazio .)
    REAL            reduce using rule 3 (lista_funcoes -> vazio .)
    LOGICAL         reduce using rule 3 (lista_funcoes -> vazio .)
    $end            reduce using rule 3 (lista_funcoes -> vazio .)


state 6

    (4) programa -> PROGRAM ID . lista_instrucao END
    (10) lista_instrucao -> . lista_instrucao instrucao
    (11) lista_instrucao -> . instrucao
    (12) instrucao -> . instrucao_sem_label
    (13) instrucao -> . label instrucao_sem_label
    (14) instrucao_sem_label -> . declaracao
    (15) instrucao_sem_label -> . atribuicao
    (16) instrucao_sem_label -> . comando_if
    (17) instrucao_sem_label -> . comando_do
    (18) instrucao_sem_label -> . comando_goto
    (19) instrucao_sem_label -> . comando_print
    (20) instrucao_sem_label -> . comando_read
    (21) instrucao_sem_label -> . comando_continue
    (22) instrucao_sem_label -> . comando_return
    (23) label -> . INTEGER_LIT
    (24) declaracao -> . tipo lista_variaveis
    (32) atribuicao -> . referencia ASSIGN expressao
    (35) comando_if -> . IF expressao THEN lista_instrucao ELSE lista_instrucao ENDIF
    (36) comando_if -> . IF expressao THEN lista_instrucao ENDIF
    (37) comando_do -> . DO label ID ASSIGN expressao COMMA expressao opt_step lista_instrucao label CONTINUE
    (40) comando_goto -> . GOTO label
    (43) comando_print -> . PRINT TIMES COMMA lista_prints
    (48) comando_read -> . READ TIMES COMMA lista_reads
    (41) comando_continue -> . CONTINUE
    (42) comando_return -> . RETURN
    (25) tipo -> . INTEGER
    (26) tipo -> . REAL
    (27) tipo -> . LOGICAL
    (33) referencia -> . ID LPAREN lista_argumentos RPAREN
    (34) referencia -> . ID

    INTEGER_LIT     shift and go to state 26
    IF              shift and go to state 29
    DO              shift and go to state 30
    GOTO            shift and go to state 32
    PRINT           shift and go to state 33
    READ            shift and go to state 34
    CONTINUE        shift and go to state 31
    RETURN          shift and go to state 35
    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    LOGICAL         shift and go to state 11
    ID              shift and go to state 12

    lista_instrucao                shift and go to state 13
    instrucao                      shift and go to state 14
    instrucao_sem_label            shift and go to state 15
    label                          shift and go to state 16
    declaracao                     shift and go to state 17
    atribuicao                     shift and go to state 18
    comando_if                     shift and go to state 19
    comando_do                     shift and go to state 20
    comando_goto                   shift and go to state 21
    comando_print                  shift and go to state 22
    comando_read                   shift and go to state 23
    comando_continue               shift and go to state 24
    comando_return                 shift and go to state 25
    tipo                           shift and go to state 27
    referencia                     shift and go to state 28

state 7

    (2) lista_funcoes -> lista_funcoes funcao .

    INTEGER         reduce using rule 2 (lista_funcoes -> lista_funcoes funcao .)
    REAL            reduce using rule 2 (lista_funcoes -> lista_funcoes funcao .)
    LOGICAL         reduce using rule 2 (lista_funcoes -> lista_funcoes funcao .)
    $end            reduce using rule 2 (lista_funcoes -> lista_funcoes funcao .)


state 8

    (5) funcao -> tipo . FUNCTION ID LPAREN lista_parametros RPAREN lista_instrucao END

    FUNCTION        shift and go to state 36


state 9

    (25) tipo -> INTEGER .

    FUNCTION        reduce using rule 25 (tipo -> INTEGER .)
    ID              reduce using rule 25 (tipo -> INTEGER .)


state 10

    (26) tipo -> REAL .

    FUNCTION        reduce using rule 26 (tipo -> REAL .)
    ID              reduce using rule 26 (tipo -> REAL .)


state 11

    (27) tipo -> LOGICAL .

    FUNCTION        reduce using rule 27 (tipo -> LOGICAL .)
    ID              reduce using rule 27 (tipo -> LOGICAL .)


state 12

    (33) referencia -> ID . LPAREN lista_argumentos RPAREN
    (34) referencia -> ID .

    LPAREN          shift and go to state 37
    ASSIGN          reduce using rule 34 (referencia -> ID .)
    TIMES           reduce using rule 34 (referencia -> ID .)
    DIVIDE          reduce using rule 34 (referencia -> ID .)
    EQ              reduce using rule 34 (referencia -> ID .)
    NE              reduce using rule 34 (referencia -> ID .)
    LT              reduce using rule 34 (referencia -> ID .)
    LE              reduce using rule 34 (referencia -> ID .)
    GT              reduce using rule 34 (referencia -> ID .)
    GE              reduce using rule 34 (referencia -> ID .)
    PLUS            reduce using rule 34 (referencia -> ID .)
    MINUS           reduce using rule 34 (referencia -> ID .)
    AND             reduce using rule 34 (referencia -> ID .)
    THEN            reduce using rule 34 (referencia -> ID .)
    OR              reduce using rule 34 (referencia -> ID .)
    COMMA           reduce using rule 34 (referencia -> ID .)
    RPAREN          reduce using rule 34 (referencia -> ID .)
    END             reduce using rule 34 (referencia -> ID .)
    INTEGER_LIT     reduce using rule 34 (referencia -> ID .)
    IF              reduce using rule 34 (referencia -> ID .)
    DO              reduce using rule 34 (referencia -> ID .)
    GOTO            reduce using rule 34 (referencia -> ID .)
    PRINT           reduce using rule 34 (referencia -> ID .)
    READ            reduce using rule 34 (referencia -> ID .)
    CONTINUE        reduce using rule 34 (referencia -> ID .)
    RETURN          reduce using rule 34 (referencia -> ID .)
    INTEGER         reduce using rule 34 (referencia -> ID .)
    REAL            reduce using rule 34 (referencia -> ID .)
    LOGICAL         reduce using rule 34 (referencia -> ID .)
    ID              reduce using rule 34 (referencia -> ID .)
    ELSE            reduce using rule 34 (referencia -> ID .)
    ENDIF           reduce using rule 34 (referencia -> ID .)


state 13

    (4) programa -> PROGRAM ID lista_instrucao . END
    (10) lista_instrucao -> lista_instrucao . instrucao
    (12) instrucao -> . instrucao_sem_label
    (13) instrucao -> . label instrucao_sem_label
    (14) instrucao_sem_label -> . declaracao
    (15) instrucao_sem_label -> . atribuicao
    (16) instrucao_sem_label -> . comando_if
    (17) instrucao_sem_label -> . comando_do
    (18) instrucao_sem_label -> . comando_goto
    (19) instrucao_sem_label -> . comando_print
    (20) instrucao_sem_label -> . comando_read
    (21) instrucao_sem_label -> . comando_continue
    (22) instrucao_sem_label -> . comando_return
    (23) label -> . INTEGER_LIT
    (24) declaracao -> . tipo lista_variaveis
    (32) atribuicao -> . referencia ASSIGN expressao
    (35) comando_if -> . IF expressao THEN lista_instrucao ELSE lista_instrucao ENDIF
    (36) comando_if -> . IF expressao THEN lista_instrucao ENDIF
    (37) comando_do -> . DO label ID ASSIGN expressao COMMA expressao opt_step lista_instrucao label CONTINUE
    (40) comando_goto -> . GOTO label
    (43) comando_print -> . PRINT TIMES COMMA lista_prints
    (48) comando_read -> . READ TIMES COMMA lista_reads
    (41) comando_continue -> . CONTINUE
    (42) comando_return -> . RETURN
    (25) tipo -> . INTEGER
    (26) tipo -> . REAL
    (27) tipo -> . LOGICAL
    (33) referencia -> . ID LPAREN lista_argumentos RPAREN
    (34) referencia -> . ID

    END             shift and go to state 38
    INTEGER_LIT     shift and go to state 26
    IF              shift and go to state 29
    DO              shift and go to state 30
    GOTO            shift and go to state 32
    PRINT           shift and go to state 33
    READ            shift and go to state 34
    CONTINUE        shift and go to state 31
    RETURN          shift and go to state 35
    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    LOGICAL         shift and go to state 11
    ID              shift and go to state 12

    instrucao                      shift and go to state 39
    instrucao_sem_label            shift and go to state 15
    label                          shift and go to state 16
    declaracao                     shift and go to state 17
    atribuicao                     shift and go to state 18
    comando_if                     shift and go to state 19
    comando_do                     shift and go to state 20
    comando_goto                   shift and go to state 21
    comando_print                  shift and go to state 22
    comando_read                   shift and go to state 23
    comando_continue               shift and go to state 24
    comando_return                 shift and go to state 25
    tipo                           shift and go to state 27
    referencia                     shift and go to state 28

state 14

    (11) lista_instrucao -> instrucao .

    END             reduce using rule 11 (lista_instrucao -> instrucao .)
    INTEGER_LIT     reduce using rule 11 (lista_instrucao -> instrucao .)
    IF              reduce using rule 11 (lista_instrucao -> instrucao .)
    DO              reduce using rule 11 (lista_instrucao -> instrucao .)
    GOTO            reduce using rule 11 (lista_instrucao -> instrucao .)
    PRINT           reduce using rule 11 (lista_instrucao -> instrucao .)
    READ            reduce using rule 11 (lista_instrucao -> instrucao .)
    CONTINUE        reduce using rule 11 (lista_instrucao -> instrucao .)
    RETURN          reduce using rule 11 (lista_instrucao -> instrucao .)
    INTEGER         reduce using rule 11 (lista_instrucao -> instrucao .)
    REAL            reduce using rule 11 (lista_instrucao -> instrucao .)
    LOGICAL         reduce using rule 11 (lista_instrucao -> instrucao .)
    ID              reduce using rule 11 (lista_instrucao -> instrucao .)
    ELSE            reduce using rule 11 (lista_instrucao -> instrucao .)
    ENDIF           reduce using rule 11 (lista_instrucao -> instrucao .)


state 15

    (12) instrucao -> instrucao_sem_label .

    END             reduce using rule 12 (instrucao -> instrucao_sem_label .)
    INTEGER_LIT     reduce using rule 12 (instrucao -> instrucao_sem_label .)
    IF              reduce using rule 12 (instrucao -> instrucao_sem_label .)
    DO              reduce using rule 12 (instrucao -> instrucao_sem_label .)
    GOTO            reduce using rule 12 (instrucao -> instrucao_sem_label .)
    PRINT           reduce using rule 12 (instrucao -> instrucao_sem_label .)
    READ            reduce using rule 12 (instrucao -> instrucao_sem_label .)
    CONTINUE        reduce using rule 12 (instrucao -> instrucao_sem_label .)
    RETURN          reduce using rule 12 (instrucao -> instrucao_sem_label .)
    INTEGER         reduce using rule 12 (instrucao -> instrucao_sem_label .)
    REAL            reduce using rule 12 (instrucao -> instrucao_sem_label .)
    LOGICAL         reduce using rule 12 (instrucao -> instrucao_sem_label .)
    ID              reduce using rule 12 (instrucao -> instrucao_sem_label .)
    ELSE            reduce using rule 12 (instrucao -> instrucao_sem_label .)
    ENDIF           reduce using rule 12 (instrucao -> instrucao_sem_label .)


state 16

    (13) instrucao -> label . instrucao_sem_label
    (14) instrucao_sem_label -> . declaracao
    (15) instrucao_sem_label -> . atribuicao
    (16) instrucao_sem_label -> . comando_if
    (17) instrucao_sem_label -> . comando_do
    (18) instrucao_sem_label -> . comando_goto
    (19) instrucao_sem_label -> . comando_print
    (20) instrucao_sem_label -> . comando_read
    (21) instrucao_sem_label -> . comando_continue
    (22) instrucao_sem_label -> . comando_return
    (24) declaracao -> . tipo lista_variaveis
    (32) atribuicao -> . referencia ASSIGN expressao
    (35) comando_if -> . IF expressao THEN lista_instrucao ELSE lista_instrucao ENDIF
    (36) comando_if -> . IF expressao THEN lista_instrucao ENDIF
    (37) comando_do -> . DO label ID ASSIGN expressao COMMA expressao opt_step lista_instrucao label CONTINUE
    (40) comando_goto -> . GOTO label
    (43) comando_print -> . PRINT TIMES COMMA lista_prints
    (48) comando_read -> . READ TIMES COMMA lista_reads
    (41) comando_continue -> . CONTINUE
    (42) comando_return -> . RETURN
    (25) tipo -> . INTEGER
    (26) tipo -> . REAL
    (27) tipo -> . LOGICAL
    (33) referencia -> . ID LPAREN lista_argumentos RPAREN
    (34) referencia -> . ID
